pluginTests/testData/testProjects/redcodes/kotlin_compiler_plugin_leaking_classpath/Lib.kt
package com.example

class Lib {
   private val obj = com.example.<error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'plugin'.">plugin</error>.PluginClass()
}
